Revision history for Perl extension Apache2::AuthCookieDBI.

2.17
     - Added support for Digest::SHA::sha256_hex digests for passwords.
       https://rt.cpan.org/Ticket/Display.html?id=79333

2.16 - Sun May 27 00:23:41 PDT 2012
     - Fix 'wrong method names in calls to apache request logging' for https://rt.cpan.org/Ticket/Display.html?id=77464

2.15 - Sat May 26 08:32:23 PDT 2012
     - Implemented a logger() method that uses Apache::Log (inspired by https://rt.cpan.org/Ticket/Display.html?id=75675)
     - Address 'Error Message Inconsistency' https://rt.cpan.org/Ticket/Display.html?id=75725
     - Address ' If user is not active, it produces 2 errors'  https://rt.cpan.org/Ticket/Display.html?id=75724
     - Added small amount of test coverage for authen_cred()

2.14 - Sat Mar 26 09:41:01 PDT 2011
     - Changed documentation about WhateverDBI_SecretKey to
       address https://rt.cpan.org/Ticket/Display.html?id=62488
     - Fixes for https://rt.cpan.org/Public/Bug/Display.html?id=66336
       (_dbi_connect should be called as a class method.)

2.13 - Sat Dec 18 10:33:19 PST 2010
     - Build system uses Module::Build (generates a Makefile.PL for compatability.)
     - Distro version now matches module version (2.13)
     - Fixed statement handle still active <https://rt.cpan.org/Public/Bug/Display.html?id=57906>
       Also added support for WhatEverDBI_UserActiveField
       Thanks to Chad Columbus
     - Fixed $HEX_STRING_REGEX definition is wrong <https://rt.cpan.org/Public/Bug/Display.html?id=46117>
       Thanks to Joe Ingersoll
     - Fixed User authenticated if not in MySQL database <https://rt.cpan.org/Ticket/Display.html?id=62470>
       Thanks to Keith Lawson
     - Fixed Login.pl example - syntax error <https://rt.cpan.org/Public/Bug/Display.html?id=62487>
       (also moved from eg/public-pl/login.pl to eg/bin/login.pl)
       Thanks to William McKee http://search.cpan.org/~wmckee/